[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/main_level/StonePlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/main_level/BlueShip.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/main_level/PlatformBlue.gd" type="Script" id=3]
[ext_resource path="res://scenes/main_level/ObjectiveArea.gd" type="Script" id=4]
[ext_resource path="res://assets/bg1.png" type="Texture" id=5]
[ext_resource path="res://assets/bunny.png" type="Texture" id=6]
[ext_resource path="res://scenes/main_level/GameOver.gd" type="Script" id=7]
[ext_resource path="res://assets/FASTER2019-01-02_-_8_Bit_Menu_-_David_Renda_-_FesliyanStudios.com.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/yay-6120.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/error-sound-39539.mp3" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 69.375, 39.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 523.5, 12 )

[node name="MainLevel" type="Node"]
__meta__ = {
"_edit_horizontal_guides_": [ 315.0 ],
"_edit_vertical_guides_": [ 501.0 ]
}

[node name="BlueShip" parent="." instance=ExtResource( 2 )]
position = Vector2( 70, 351 )

[node name="ObjectiveArea" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2( 507.375, 59.75 )
shape = SubResource( 1 )

[node name="MyLabel" type="Label" parent="ObjectiveArea"]
anchor_right = 0.456
anchor_bottom = 0.45
margin_left = 447.0
margin_top = 308.0
margin_right = 557.92
margin_bottom = 322.0
text = "Hero's Mission:
Save The Bunny!"
align = 1

[node name="bunny" type="Sprite" parent="ObjectiveArea"]
position = Vector2( 507.75, 61.75 )
scale = Vector2( 0.173611, 0.167339 )
texture = ExtResource( 6 )

[node name="PlatformBlue" type="Node2D" parent="."]
position = Vector2( 35, 565 )
script = ExtResource( 3 )

[node name="StonePlatform" parent="PlatformBlue" instance=ExtResource( 1 )]

[node name="StonePlatform2" parent="PlatformBlue" instance=ExtResource( 1 )]
position = Vector2( 70, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 516, 305 )
scale = Vector2( 1.02183, 0.618896 )
texture = ExtResource( 5 )

[node name="GameOver" type="Area2D" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOver"]
position = Vector2( 516, 642 )
shape = SubResource( 2 )

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="Success" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="GameOverMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="GameOver" to="GameOver" method="_on_GameOver_body_entered"]
